base/infrastructure/tailscale/egress/soob/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: soob-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`soob.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: soob-egress
          port: 6767
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: soob-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`soob.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: soob-egress
          port: 6767
  tls:
    secretName: soob-tls
